core-macros/tests/compile_fail/duplicate_assert.stderr
error: `#[assert]` may appear at most once per field
  --> tests/compile_fail/duplicate_assert.rs:10:5
   |
10 |     #[assert("$value < 100")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
